--- a/src/static/admin/scss/hierarchy_filter.scss
+++ b/src/static/admin/scss/hierarchy_filter.scss
@@ -2,10 +2,15 @@
 
 .hierarchy-filter {
   padding: 12px 20px;
-  margin-top: 10px;
+  margin-bottom: 12px;
   overflow: hidden;
   background-color: #f5f5f5;
   @include border_radius(4px);
+
+  @at-root #changelist-search & {
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
 
   .title {
     font-size: 12px;
