--- a/src/templates/admin/hierarchy_filter.html
+++ b/src/templates/admin/hierarchy_filter.html
@@ -1,5 +1,5 @@
 <div class="hierarchy-filter xfull">
-  <div class="title">{{ spec.title }}:</div>
+  <div class="title">{{ title }}:</div>
 
   <ul class="toplinks breadcrumb">
     {% with back=choices.0 %}
