--- a/src/templates/admin/date_hierarchy.html
+++ b/src/templates/admin/date_hierarchy.html
@@ -1,5 +1,9 @@
+{% load i18n %}
+
 {% if show %}
   <div class="hierarchy-filter xfull">
+    <div class="title">{% trans 'Date' %}:</div>
+
     <ul class="toplinks breadcrumb">
       {% if back %}
         <li class="date-back">
