--- a/src/templates/admin/date_hierarchy.html
+++ b/src/templates/admin/date_hierarchy.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% if show %}
+{% if show and choices %}
   <div class="hierarchy-filter xfull">
     <div class="title">{% trans 'Date' %}:</div>
 
