--- a/src/templates/admin/search_form.html
+++ b/src/templates/admin/search_form.html
@@ -17,6 +17,7 @@
                 {% for spec in cl.filter_specs %}
                   {% if not spec.hierarchy_filter %}
                     {% suit_list_filter_select cl spec %}
+                    &nbsp;
                   {% endif %}
                 {% endfor %}
                 </span>
