--- a/src/libs/autocomplete/templates/autocomplete/admin/filter.html
+++ b/src/libs/autocomplete/templates/autocomplete/admin/filter.html
@@ -16,5 +16,5 @@
        data-url="{{ spec.url }}"
        data-multiple="{{ spec.multiple|yesno:"1,0" }}"
        data-expression="{{ spec.expression }}"
-       data-minimum_input_length="{{ spec.minimum_input_length }}"
+       data-minimum_input_length="{{ spec.min_chars }}"
        data-filters="{{ spec.filters_fields }}">
