Revert "lil fix"
This reverts commit f5e72d3d21d20e75cd87aa885167ad4f6f1e1390.

--- a/src/apps_common/header/static/header/scss/header.scss
+++ b/src/apps_common/header/static/header/scss/header.scss
@@ -31,10 +31,10 @@ $logo_height: 54px;
         background: $sprite_url no-repeat 0 0;
         background-size: rel-background-size($logo_width, $logo_height);
       }
+    }
 
-      &:hover {
-        @include opacity(0.75);
-      }
+    a.logo:hover {
+      @include opacity(0.75);
     }
   }
 
