--- a/src/templates/admin/date_hierarchy.html
+++ b/src/templates/admin/date_hierarchy.html
@@ -2,7 +2,7 @@
 
 {% if show and choices %}
   <div class="hierarchy-filter xfull">
-    <div class="title"><b>{% trans 'Date' %}:</b></div>
+    <div class="title">{% trans 'Date' %}:</div>
 
     <ul class="toplinks breadcrumb">
       {% if back %}
