--- a/src/static/admin/scss/hierarchy_filter.scss
+++ b/src/static/admin/scss/hierarchy_filter.scss
@@ -14,6 +14,7 @@
 
   .title {
     font-size: 12px;
+    font-weight: bold;
   }
 
   ul {
@@ -26,6 +27,11 @@
 
     .divider {
       margin-left: 10px;
+
+      &.small {
+        margin-left: 5px;
+        margin-right: -5px;
+      }
     }
 
     &.active {
