--- a/src/libs/file_field/templates/file_field/admin/widget.html
+++ b/src/libs/file_field/templates/file_field/admin/widget.html
@@ -1,10 +1,12 @@
 {% load i18n %}
+{% load file_widget %}
 
-<div class="file-widget {% if value %}has-value{% endif %}">
+<div class="file-widget {% if value %}has-value has-link{% endif %}" data-old-name="{{ value.name|basename }}">
   <label for="{{ for_label }}" class="btn btn-small btn-success">
     <i class="icon-folder-open icon-white"></i>
-    {% trans 'Choose file' %}
+    <span>{% if value %}{{ value.name|basename }}{% else %}{% trans 'Choose a file' %}{% endif %}</span>
     {{ input }}
   </label>
+
   <a href="{{ value.url|default:"#" }}" target="_blank" class="preview btn btn-info" title="{% trans 'View file' %}"></a>
 </div>
