admin widgets + form controls

--- a/src/libs/form_helper/templates/form_helper/unlabeled_field.html
+++ b/src/libs/form_helper/templates/form_helper/unlabeled_field.html
@@ -1,5 +1,7 @@
 {% extends 'form_helper/field.html' %}
 
 {% block field %}
-  {{ field }}
+  <div class="control">
+    {{ field }}
+  </div>
 {% endblock field %}
