--- a/src/libs/form_helper/templates/form_helper/field.html
+++ b/src/libs/form_helper/templates/form_helper/field.html
@@ -3,7 +3,10 @@
     <div class="label-holder">
       <label for="{{ field.id_for_label }}">{{ field.label }}</label>
     </div>
-    {{ field }}
+
+    <div class="control">
+      {{ field }}
+    </div>
   {% endblock field %}
 
   {% block errors %}
