--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -2,14 +2,18 @@
 
 <footer itemscope itemtype="https://schema.org/WPFooter">
   <div class="grid-block">
-    <div class="copyright">
-      &copy; <span itemprop="copyrightYear">{% now "Y" %}</span> Direct Line Development Inc
+
+    <div class="flex">
+      <div class="copyright-box">
+        <p class="copyright">&copy; <span itemprop="copyrightYear">{% now "Y" %}</span> Direct Line Development Inc</p>
+      </div>
+
+      <div class="dl-logo-box">
+        <a href="http://directlinedev.com/" target="_blank" title="Web Development Company Philadelphia">
+          <img src="{% static 'img/dl_logo.png' %}" alt="Web Development Company Philadelphia" width="99">
+        </a>
+      </div>
     </div>
 
-    <div class="dl-logo">
-      <a href="http://directlinedev.com/" target="_blank" title="Web Development Company Philadelphia">
-        <img src="{% static 'img/dl_logo.png' %}" alt="Web Development Company Philadelphia" width="99">
-      </a>
-    </div>
   </div>
 </footer>
