--- a/src/apps/shop/templates/shop/index.html
+++ b/src/apps/shop/templates/shop/index.html
@@ -19,13 +19,7 @@
   <div class="block grid-block">
     <h1 class="title-h1">{{ config.header }}</h1>
 
-    <ul class="list">
-      {% for category in root_categories %}
-        <li>
-          <a href="{{ category.get_absolute_url }}" class="category-link">{{ category.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
+    {% include 'shop/category_list.html' with categories=root_categories %}
   </div>
 
 {% endblock content %}
