--- a/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
@@ -36,7 +36,7 @@ td {
   font-family: Tahoma, Helvetica, Arial, sans-serif;
 }
 
-h1, h2, p, li {
+h1, h2, p, ol, ul {
   font-size: 14px;
   line-height: 1.786;
   font-family: Tahoma, Helvetica, Arial, sans-serif;
@@ -81,12 +81,12 @@ img {
 }
 
 ol {
-  padding-left: 1.4em;
+  padding-left: 1.6em;
   margin: 1.1em 0;
 }
 
 ul {
-  padding-left: 1em;
+  padding-left: 1.4em;
   margin: 1.1em 0;
 }
 
