--- a/src/static/scss/popups/_popups_core.scss
+++ b/src/static/scss/popups/_popups_core.scss
@@ -16,28 +16,30 @@
   overflow-x: hidden;
   z-index: 101;
   @include font-size(20px);
+}
 
-  .popup-wrapper {
-    height: 100%;
-    @include border-box;
-    @include no_fontsize;
-    @include valign_after;
-  }
+.popup-wrapper {
+  max-width: $grid_max_width;
+  margin: 0 auto;
+  height: 100%;
+  @include border-box;
+  @include no_fontsize;
+  @include valign_after;
+}
 
-  .popup-window {
-    display: inline-block;
-    position: relative;
-    margin: 0 auto;
-    z-index: 1;
-    text-align: left;
-    vertical-align: middle;
-    @include border-box;
-  }
+.popup-window {
+  display: inline-block;
+  position: relative;
+  margin: 0 auto;
+  z-index: 1;
+  text-align: left;
+  vertical-align: middle;
+  @include border-box;
+}
 
-  .popup-content {
-    position: relative;
-    overflow: hidden;
-    z-index: 5;
-    @include border-box;
-  }
+.popup-content {
+  position: relative;
+  overflow: hidden;
+  z-index: 5;
+  @include border-box;
 }
