--- a/src/apps_common/footer/static/footer/scss/footer.scss
+++ b/src/apps_common/footer/static/footer/scss/footer.scss
@@ -1,17 +1,17 @@
 @import 'mixins';
 
 // точка перехода к вертикальному подвалу
-$column_footer: $media480;
+$column_footer: $media640;
 
 
 #footer-cell > footer {
-  background-color: #D0D0D0;
+  color: $white;
+  background-color: #404040;
   @include vpad(40px);
 
   .flex {
     @include flexbox;
     @include align-items(center);
-    @include justify-content(flex-start);
     @include media_interval(0, $column_footer) {
       @include align-items(stretch);
       @include flex-direction(column);
@@ -23,20 +23,39 @@ $column_footer: $media480;
 
     .copyright {
       @include fontsize_default;
+      @include media_interval(0, $column_footer) {
+        margin-bottom: 16px;
+        text-align: center;
+      }
     }
   }
 
   .dl-logo-box {
-    @include media_interval(0, $column_footer) {
-      margin-top: 16px;
-    }
+    @include flex(0 0 auto);
 
-    a {
-      display: inline-block;
-      vertical-align: middle;
+    .dl-links {
+      text-align: right;
+      @include media_interval(0, $column_footer) {
+        text-align: center;
+      }
 
-      &:hover {
-        @include opacity(0.8);
+      p {
+        display: inline-block;
+        margin-bottom: 10px;
+        text-align: left;
+        white-space: nowrap;
+        @include font-size(14px, 22px);
+        @include media_interval(0, $column_footer) {
+          text-align: center;
+        }
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      a:hover {
+        @include opacity(0.7);
       }
     }
   }
