--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -14,7 +14,9 @@
       </div>
 
       <div class="menu-box">
-        <span id="mobile-menu-button"></span>
+        <div id="mobile-menu-button">
+          <div class="burger"></div>
+        </div>
 
         <nav id="main-menu">
           {% menu 'main' %}
