--- a/src/apps/services/templates/services/detail.html
+++ b/src/apps/services/templates/services/detail.html
@@ -6,12 +6,12 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'service_page' %}
+  {% stylesheet 'service' %}
 {% endblock static_head %}
 
 {% block static_js %}
   {{ block.super }}
-  {% javascript 'service_page' %}
+  {% javascript 'service' %}
 {% endblock static_js %}
 
 
