--- a/src/apps/services/templates/services/index.html
+++ b/src/apps/services/templates/services/index.html
@@ -6,12 +6,12 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'services_page' %}
+  {% stylesheet 'services' %}
 {% endblock static_head %}
 
 {% block static_js %}
   {{ block.super }}
-  {% javascript 'services_page' %}
+  {% javascript 'services' %}
 {% endblock static_js %}
 
 
