--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -28,7 +28,7 @@
     margin-bottom: 10px;
   }
 
-  h2, h3, h4 {
+  h2, h3 {
     margin: 1.1em 0 0.5em;
     font-weight: bold;
     line-height: 1.2;
@@ -46,10 +46,6 @@
     @include media_interval(0, $media768) {
       @include font-size(18px);
     }
-  }
-
-  h4 {
-    @include font-size(16px);
   }
 
   ul, ol {
