fast shop products query

--- a/src/apps/shop/templates/shop/product_list.html
+++ b/src/apps/shop/templates/shop/product_list.html
@@ -4,7 +4,7 @@
       <div class="inner">
         <div class="photo">
           <a href="{{ product.get_absolute_url }}">
-            <img src="{{ product.photo.normal.url }}" alt="{{ product.title }}"
+            <img src="{{ product.photo.normal.url }}" alt="{{ product.photo_description }}"
                  width="{{ product.photo.normal.target_width }}"
                  height="{{ product.photo.normal.target_height }}">
           </a>
