--- a/src/apps_common/social_networks/templates/social_networks/social_links.html
+++ b/src/apps_common/social_networks/templates/social_networks/social_links.html
@@ -1,4 +1,4 @@
-<div class="social-links">
+<div class="social-links {{ classes }}">
   {% if links.social_google %}
     <a href="{{ links.social_google }}" target="_blank" class="go"></a>
   {% endif %}
