--- a/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
@@ -22,14 +22,17 @@ $close_btn_weight: 2px;
   background: rgba(0, 0, 0, 0.9);
 }
 
-#gallery-popup-container {
+.gallery-popup {
   .popup-window {
+    margin: 0;
     width: 100%;
     height: 100%;
+    max-width: none;
   }
 
   .popup-content {
     height: 100%;
+    background-color: transparent;
   }
 
   .popup-close-button {
