--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -63,5 +63,5 @@ $menu_burger_line_height: 4px;
 $menu_burger_line_space: 5px;
 
 // интервал показа мобильного меню
-$mobile_menu_interval: (0, $media768);
+$media_mobile: $media768;
 
