parallax -> jquery UI
# Conflicts:
#	src/apps/main/static/main/scss/index.scss

--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -1,17 +1,22 @@
 @import "mixins";
 
-.parallax {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  max-width: none;
-  z-index: 1;
-  text-align: center;
-  @include transform(translate(-50%, -50%));
+.parallax-image {
+  @include centrizeImage;
+
+  &.parallax-image-enabled {
+    @include transform(translate(-50%, 0));
+  }
+
+  &.parallax-image-disabled {
+    top: 50% !important;
+    min-height: 100% !important;
+  }
 
   @at-root .js & {
     display: none;
+
+    &.parallax-image-loaded {
+      display: inline-block;
+    }
   }
 }
