--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -2,23 +2,35 @@
 
 .parallax-image {
   max-width: none;
+  min-height: 150%;
   @include centrizeImage;
 
-  &.parallax-image-enabled {
+  &.parallax-enabled {
     @include transform(translate(-50%, 0));
   }
 
-  &.parallax-image-disabled {
+  &.parallax-disabled {
     top: 50% !important;
     min-height: 100% !important;
   }
+}
 
-  @at-root .js & {
-    display: none;
+// Случай использования тэга picture
+picture.parallax {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
 
-    &.parallax-image-loaded {
-      display: inline-block;
-      min-height: 150%;
-    }
+// анимация появления
+.js .parallax {
+  @include opacity(0);
+
+  &.parallax-loaded {
+    @include opacity(1);
+    @include transition(opacity 0.2s);
   }
 }
