--- a/src/templates/suit/menu.html
+++ b/src/templates/suit/menu.html
@@ -7,7 +7,7 @@
     {% block menu_home %}
       {% url 'admin:index' as index_url %}
       <li{% if index_url == request.path %} class="active"{% endif %}>
-        <a href="{{ index_url }}"><i class="icon-home"></i>{% trans 'Home' %}
+        <a href="{{ index_url }}"><i class="icon-home"></i>{% trans 'Welcome' %}
         </a>
       </li>
     {% endblock %}
