--- a/src/apps_common/rating/templates/rating/voting.html
+++ b/src/apps_common/rating/templates/rating/voting.html
@@ -2,7 +2,7 @@
   <meta itemprop="ratingValue" content="{{ rating.avg|floatformat:"2" }}">
   <meta itemprop="reviewCount" content="{{ rating.count }}">
 
-  <ul class="stars {% if voted %}voted voted-{{ voted }}{% endif %}">
+  <ul class="stars">
     <li data-vote="1"></li>
     <li data-vote="2"></li>
     <li data-vote="3"></li>
