--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -1,3 +1,4 @@
+{% load placeholder %}
 {% load cacheblock %}
 {% load menu %}
 
@@ -22,11 +23,9 @@
           {% menu 'main' %}
         </nav>
 
-        {% cacheblock 1800 mobile-menu request.path_info %}
-          <div class="menu mobile-menu">
-            {% menu 'main' %}
-          </div>
-        {% endcacheblock %}
+        <div class="menu mobile-menu">
+          {% placeholder "menu" menu_name='main' referer=request.path_info %}
+        </div>
       </div>
     </div>
 
