--- a/src/templates/admin/change_form.html
+++ b/src/templates/admin/change_form.html
@@ -178,7 +178,7 @@
                             showRelatedObjectLookupPopup(this);
                         });
                     {% if adminform and add %}
-                        $('form#{% firstof opts.model_name opts.module_name %}_form :input[type!=button][type!=submit]:visible:enabled:first').focus()
+                        $('form#{% firstof opts.model_name opts.module_name %}_form :input[type!=button][type!=submit]:visible:enabled:first').focus();
                     {% endif %}
                     });
                 })(django.jQuery);
