--- a/src/libs/stdimage/static/stdimage/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/css/stdimage.css
@@ -43,6 +43,6 @@
     height: 100%;
     z-index: 3;
     cursor: pointer;
-    filter: unquote("progid:DXImageTransform.Microsoft.Alpha(Opacity=0)");
+    filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     opacity: 0;
 }
