fix maps + fix grid for gulp

--- a/src/apps_common/google_maps/static/google_maps/scss/clusters.scss
+++ b/src/apps_common/google_maps/static/google_maps/scss/clusters.scss
@@ -14,7 +14,7 @@
     position: relative;
     padding: 6px 10px;
     color: $white;
-    background: $blue;
+    background: #F8554B;
     text-align: center;
     white-space: nowrap;
     letter-spacing: 0.04em;
@@ -32,7 +32,7 @@
       left: 50%;
       bottom: -23px;
       z-index: -1;
-      border-top: 15px solid $blue;
+      border-top: 15px solid #F8554B;
       border-bottom: 15px solid transparent;
       border-left: 12px solid transparent;
       border-right: 12px solid transparent;
