--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -25,18 +25,22 @@
   }
 }
 
-.gc {
+@mixin _grid_column() {
   min-height: 1px;
   padding: 0 $grid_column_gap;
   @include border-box;
   @include background-clip(content-box);
 }
 
+.gc {
+  @include _grid_column;
+}
+
 // Wide-desktop (1200+)
 @include media_interval($media1200, 0) {
   @for $index from 1 through $cols_wide - 1 {
     .gc-wide-#{$index} {
-      @extend .gc;
+      @include _grid_column;
       float: left;
       width: (100% / $cols_wide) * $index;
     }
@@ -50,7 +54,7 @@
   }
 
   .gc-wide-full {
-    @extend .gc;
+    @include _grid_column;
     width: 100%;
   }
 }
@@ -59,7 +63,7 @@
 @include media_interval($media1024, $media1200) {
   @for $index from 1 through $cols_desktop - 1 {
     .gc-#{$index} {
-      @extend .gc;
+      @include _grid_column;
       float: left;
       width: (100% / $cols_desktop) * $index;
     }
@@ -73,7 +77,7 @@
   }
 
   .gc-full {
-    @extend .gc;
+    @include _grid_column;
     width: 100%;
   }
 }
@@ -82,7 +86,7 @@
 @include media_interval($media768, $media1024) {
   @for $index from 1 through $cols_tablet - 1 {
     .gc-tablet-#{$index} {
-      @extend .gc;
+      @include _grid_column;
       float: left;
       width: (100% / $cols_tablet) * $index;
     }
@@ -96,7 +100,7 @@
   }
 
   .gc-tablet-full {
-    @extend .gc;
+    @include _grid_column;
     width: 100%;
   }
 }
@@ -105,7 +109,7 @@
 @include media_interval(0, $media768) {
   @for $index from 1 through $cols_mobile - 1 {
     .gc-mobile-#{$index} {
-      @extend .gc;
+      @include _grid_column;
       float: left;
       width: (100% / $cols_mobile) * $index;
     }
@@ -119,7 +123,7 @@
   }
 
   .gc-mobile-full {
-    @extend .gc;
+    @include _grid_column;
     width: 100%;
   }
 }
