--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -84,6 +84,7 @@ input[type=checkbox] {
     display: inline-block;
     padding-left: $checkbox_size + 10px;
     margin: 0;
+    @include border-box;
     @include fontsize_default;
     line-height: $checkbox_size + 2 * $checkbox_border_width;
 
@@ -164,6 +165,7 @@ input[type=radio] {
     display: inline-block;
     padding-left: $radiobox_size + 10px;
     margin: 0;
+    @include border-box;
     @include fontsize_default;
     line-height: $radiobox_size + 2 * $radiobox_border_width;
 
